--- a/client/src/App.css
+++ b/client/src/App.css
@@ -104,3 +104,18 @@ margin-left: 30%;
   margin-top: -30px;
   margin-left: 30px;
 }
+
+.product-list{
+  text-align: center ;
+}
+
+.product-list ul li{
+  display: inline-block;
+  width:150px;
+  border: 1px solid skyblue;
+  padding: 5px;
+}
+
+.product-list ul{
+  margin: 0;
+}
