--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,4 @@
 
-
-
 .nav-ul{
   margin-top: auto;
   width: 97%;
@@ -118,4 +116,13 @@ margin-left: 30%;
 
 .product-list ul{
   margin: 0;
+}
+
+.input-search{
+
+  width: 400px;
+  margin:25px;
+  height: 38px;
+  padding-left: 40px;
+  border:solid 2px skyblue;
 }
